Fixed image overflow

--- a/assets/css/tabs.css
+++ b/assets/css/tabs.css
@@ -98,11 +98,11 @@ li.is-active a{
 }
 
 .modal-content.ver {
-	width: 35em;
+	width: 30em;
 }
 
 .modal-content.hor {
-	width: 50em;
+	width: 45em;
 }
 
 .image-container {
